--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     body{
     font-family: var(--default-font-family);
     text-align: center;
+    background-color:#d6f3c1;
     }
     
     h1 ,h2,h3,h4,h5,h6{
