--- a/style.css
+++ b/style.css
@@ -30,7 +30,11 @@
     font-size:60px;
     line-height: 1,5;
        }
-       
+   
+       h4{
+        font-size:38;  
+       }
+
        p{
        font-weight: normal;
        font-size: 16px;
@@ -159,6 +163,10 @@
         font-size: 30px;
         }
 
+        h4{
+        font-size:26px;
+        }
+           
         .hero{
             padding: 80px 20px;
         }
@@ -179,13 +187,43 @@
        font-family:var(--default-font-family);
        }
      
-       footer{
-        border-top: 1px solid #f9f7fe;
-        padding: 30px 0 0 0;
-        text-align: center;
-        font-size: 14px;
-        color: rgba (0,0,0.6);
+        footer{
+      margin: 60px 0;
         }
+
+      footer .contact-box{
+      background: var(--secondary-color);
+      padding: 30px 120px;
+      border-radius: 10px;
+      }
+   
+    
+      footer .contact-box p {
+        margin: 0;
+      }
+
+       footer .email-link {
+       color: var(--branding-color);
+       font-size: 28px;
+       text-decoration: none;
+          }
+          
+       footer .email-link:hover {
+        color:black;
+          }
+         
+      footer .social-links a{
+      margin: 0 20px; 
+      padding: 10px 14px;
+      border-radius: 20px;
+      font-size: 40px;
+      transition: all 100ms ease-in-out;
+      }
+      
+      footer .social-links a:hover{
+      color: white;
+      background: var(--branding-color);
+      }
 
         .email-link {
             display: flex;
