--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root{
     --branding-color:#249c05;
     --secondary-color:#ffffff;
+    --primary-color:rgb(205, 233, 160);
     --heading-font-family:"Playfair Dispaly",serif;
     --default-font-family:"Poppins", serif;
     }
@@ -42,7 +43,7 @@
        }
     
        .hero {
-       background-color:var(--secondary-color);
+       background-color:var(--primary-color);
        text-align:center;
        padding: 160px 20px;
        }
@@ -51,7 +52,7 @@
         font-size: 36px;
         font-weight: bold;
         margin: 0;
-        color: #272142;
+        color: black;
        }
     
        .hero h2{
